# streaming_polymarket

./: .gitignore  CLAUDE.md  README.md  bitcoin_5m.py  pyproject.toml  requirements.txt  ws_live.py
common/: __init__.py  envelope.py  kafka_sink.py  log.py  metrics.py  ssl_ctx.py  win_console.py
consumers/: score_stream.py  spark_stream.py
data/: feature_list.json  model.sarimax.pkl  training.parquet
docs/: phase-3-report.md  phase-5-report.md  phase-6-report.md  requisitos.md  tentaive-plan-v2.md  windows-rtx2060-phase6-runbook.md
infra/: docker-compose.yml
infra/grafana/dashboards/: btc-live.json
infra/grafana/provisioning/dashboards/: dashboards.yaml
infra/grafana/provisioning/datasources/: kafka.yaml
modeling/: build_dataset.py  train_model.py  train_model_cuml.py
producers/: binance_producer.py  polymarket_discovery.py  polymarket_producer.py
results/: hardware_comparison.md  phase6_cpu_vs_gpu.csv  rapids_findings.csv  rapids_findings.md
scripts/: benchmark_inference.py  run-overnight.sh  stop-overnight.sh
tools/: throughput_probe.py
